[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/scenes/game_world/world_manager.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/hud/main_hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/prefabs/camera/orbit_camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/core/systems/agent_system.gd" type="Script" id=4]
[ext_resource path="res://src/core/systems/time_system.gd" type="Script" id=5]
[ext_resource path="res://src/core/systems/asset_system.gd" type="Script" id=7]
[ext_resource path="res://src/core/systems/character_system.gd" type="Script" id=8]
[ext_resource path="res://src/core/systems/event_system.gd" type="Script" id=10]
[ext_resource path="res://src/core/systems/inventory_system.gd" type="Script" id=15]
[ext_resource path="res://src/scenes/game_world/world_rendering.gd" type="Script" id=16]
[ext_resource path="res://scenes/ui/menus/main_menu.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/ui/hud/sim_debug_panel.tscn" type="PackedScene" id=25]
[ext_resource path="res://src/core/simulation/simulation_engine.gd" type="Script" id=26]

[node name="MainGameScene" type="Node"]

[node name="WorldManager" type="Node" parent="."]
script = ExtResource( 1 )

[node name="AgentSpawner" type="Node" parent="WorldManager"]
script = ExtResource( 4 )

[node name="AssetSystem" type="Node" parent="WorldManager"]
script = ExtResource( 7 )

[node name="CharacterSystem" type="Node" parent="WorldManager"]
script = ExtResource( 8 )

[node name="EventSystem" type="Node" parent="WorldManager"]
script = ExtResource( 10 )

[node name="InventorySystem" type="Node" parent="WorldManager"]
script = ExtResource( 15 )

[node name="TimeSystem" type="Node" parent="WorldManager"]
script = ExtResource( 5 )

[node name="SimulationEngine" type="Node" parent="WorldManager"]
script = ExtResource( 26 )

[node name="WorldRendering" type="Node" parent="."]
script = ExtResource( 16 )

[node name="MainHUD" parent="." instance=ExtResource( 2 )]

[node name="MainMenu" parent="." instance=ExtResource( 17 )]

[node name="CurrentZoneContainer" type="Spatial" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="OrbitCamera" parent="." instance=ExtResource( 3 )]

[node name="SimDebugPanel" parent="." instance=ExtResource( 25 )]
